--- a/client/views/partials/reports/receivableByPartyName.html
+++ b/client/views/partials/reports/receivableByPartyName.html
@@ -103,39 +103,18 @@
     <div class="col-xs-12">
     <div class="main-temp col-xs-12 mt-20">
             <h3 class="db-title">Payments Receivable - {{partyName}}:</h3>
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
-                <tr ng-repeat="amountListByPartyId in results" style="text-align: center;">
 
-                    <td data-title="'Date'" sortable="'date'" class="clickable-item">
-                        {{amountListByPartyId.date | date:'dd-MM-yyyy' }}
-                    </td>
-                    <td data-title="'Trip Id'" sortable="'tripId'" class="clickable-item">
-                        {{ amountListByPartyId.tripId }}
-                    </td>
-                    <td data-title="'Registration No'" sortable="'truckName'" class="clickable-item">
-                        {{ amountListByPartyId.attrs.truckName }}
-
-                    </td>
-
-                    <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item">
-                        {{ amountListByPartyId.freightAmount }}
-                    </td>
-
-                    <td data-title="'Paid Amount'" sortable="'amount'" class="clickable-item">
-                        {{ amountListByPartyId.amount}}
-                    </td>
-
-                </tr>
-                <tr ng-if="!results || results.length === 0">
-                    <td colspan="8">No Records exist.</td>
-                </tr>
-                <tr class="text-center">
-                    <td colspan="3"><b>Total</b></td>
-                    <td><b>{{amountPaid.totalFreight}}</b></td>
-                    <td><b>{{amountPaid.totalPaid}}</b></td>
-
-                </tr>
-            </table>
+        <table id="amountsByPartylist"
+               class="display table table-striped table-bordered style-table category-table table table-hover"
+               cellspacing="0" width="100%">
+            <tfoot>
+            <tr>
+                <th colspan="3">Total</th>
+                <th>{{amountPaid.totalFreight}}</th>
+                <th>{{amountPaid.totalPaid}}</th>
+            </tr>
+            </tfoot>
+        </table>
         </div>
     </div>
 </div>
