--- a/client/views/partials/reports/revenueByvehicleId.html
+++ b/client/views/partials/reports/revenueByvehicleId.html
@@ -106,33 +106,16 @@
         <div class="main-temp col-xs-12 mt-20">
             <h3 class="db-title">Revenue - {{vehicleId}}:</h3>
 
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="revenueParams">
-                <tr ng-repeat="revenueListbyId in revenueByVehicleId" style="text-align: center;">
-                    <td data-title="'Date'" sortable="'date'" class="clickable-item">
-                        {{revenueListbyId.date | date:'yyyy-MM-dd'}}
-                    </td>
-                    <td data-title="'Trip ID'" sortable="'tripId'" class="clickable-item">
-                        {{!revenueListbyId.tripId == true ? "--":revenueListbyId.tripId}}
-                    </td>
-                    <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item">
-                        {{!revenueListbyId.attrs.partyName == true ? "--":revenueListbyId.attrs.partyName}}
-                    </td>
-
-                    <td data-title="'Frieight Amount'" sortable="'freightAmount'" class="clickable-item">
-                        {{ !revenueListbyId.freightAmount == true ? "--":revenueListbyId.freightAmount}}
-                    </td>
-                    <td data-title="'Expenses'" sortable="'cost'" class="clickable-item">
-                        {{!revenueListbyId.cost == true ? "--": revenueListbyId.cost}}
-                    </td>
+            <table id="revenueByPartylist"
+                   class="display table table-striped table-bordered style-table category-table table table-hover"
+                   cellspacing="0" width="100%">
+                <tfoot>
+                <tr>
+                    <th colspan="3">Total</th>
+                    <th>{{totalRevenueByVehicleId.totalFreight}}</th>
+                    <th>{{totalRevenueByVehicleId.totalExpenses}}</th>
                 </tr>
-                <tr ng-if="!revenueByVehicleId || revenueByVehicleId.length === 0">
-                    <td colspan="8">No Records exist.</td>
-                </tr>
-                <tr class="text-center">
-                    <td colspan="3"><b>Total</b></td>
-                    <td><b>{{totalRevenueByVehicleId.totalFreight}}</b></td>
-                    <td><b>{{totalRevenueByVehicleId.totalExpenses}}</b></td>
-                </tr>
+                </tfoot>
             </table>
         </div>
     </div>
