--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -1,120 +1,58 @@
-<ul class="list-inline title-ul">
-    <li class="pull-left name-head">Customers Leads</li>
-    <li class="pull-right">
-        <button class="btn btn-primary" ui-sref="createCustomer">Create New</button>
-    </li>
-    <li class="pull-right col-xs-2">
-        <select class="form-control">
-            <option>Select</option>
-            <option>Qualified</option>
-            <option>Request for Approval</option>
-            <option>Initiate</option>
-            <option>Callback</option>
-            <option>Duplicate</option>
-            <option>Junk Lead</option>
-            <option>Language Barrier</option>
-            <option>Not Interested</option>
-        </select>
-    </li>
+<div ng-controller="customerCtrl" ng-init="getCustomerLeads()">
+    <ul class="list-inline title-ul">
+        <li class="pull-left name-head">Customers Leads</li>
+        <li class="pull-right">
+            <button class="btn btn-primary" ui-sref="createCustomer">Create New</button>
+        </li>
+        <li class="pull-right col-xs-2">
+            <select class="form-control">
+                <option>Select</option>
+                <option>Qualified</option>
+                <option>Request for Approval</option>
+                <option>Initiate</option>
+                <option>Callback</option>
+                <option>Duplicate</option>
+                <option>Junk Lead</option>
+                <option>Language Barrier</option>
+                <option>Not Interested</option>
+            </select>
+        </li>
+    </ul>
     <div class="clearfix"></div>
-</ul>
-<table class="table table-bordered table-responsive mt-20">
-    <thead>
-    <tr>
-        <th>S No</th>
-        <th>ID</th>
-        <th>Customer Name</th>
-        <th>Type</th>
-        <th>Mobile</th>
-        <th>Reg Date</th>
-        <th>is Lead</th>
-        <th>ERP</th>
-        <th>GPS</th>
-        <th>Load</th>
-        <th>Lead Status</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>TO</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td class="col-xs-2"> <select class="form-control">
-            <option ng-repeat="item in leadStatus">{{item}}</option>
-        </select></td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>TO</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td class="col-xs-2"> <select class="form-control">
-            <option ng-repeat="item in leadStatus">{{item}}</option>
-        </select></td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>TO</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td class="col-xs-2"> <select class="form-control">
-            <option ng-repeat="item in leadStatus">{{item}}</option>
-        </select></td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>TO</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td class="col-xs-2"> <select class="form-control">
-            <option ng-repeat="item in leadStatus">{{item}}</option>
-        </select></td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>TO</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Yes</td>
-        <td>Yes</td>
-        <td>No</td>
-        <td>Yes</td>
-        <td class="col-xs-2"> <select class="form-control">
-            <option ng-repeat="item in leadStatus">{{item}}</option>
-        </select></td>
-        <td>Edit/Delete</td>
-    </tr>
-    </tbody>
-</table>
+    <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="customerParams">
+        <thead>
+            <tr>
+                <th>S No</th>
+                <th>Customer Name</th>
+                <th>Type</th>
+                <th>Mobile</th>
+                <th>Reg Date</th>
+                <th>is Lead</th>
+                <th>ERP</th>
+                <th>GPS</th>
+                <th>Load</th>
+                <th>Lead Status</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="customer in customerLeads">
+                <td>{{$index+1}}</td>
+                <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.name}}</td>
+                <td data-title="'Lead Type'" sortable="'type'" class="clickable-item">{{customer.leadType}}</td>
+                <td data-title="'Mobile'" sortable="'mobile'" class="clickable-item">{{customer.contactPhone[0]}}</td>
+                <td data-title="'Date'" sortable="'date'" class="clickable-item">{{customer.createdAt | date:medium}}</td>
+                <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
+                <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erp}}</td>
+                <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gps}}</td>
+                <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.load}}</td>
+                <td class="col-xs-2">
+                    <select class="form-control">
+                        <option ng-repeat="item in leadStatus">{{item}}</option>
+                    </select>
+                </td>
+                <td><a href="#" ui-sref="createCustomer({customerId:customer._id})">Edit</a>/<a href="#" ng-click="delCustomer(customer._id)">Delete</a></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
