--- a/client/css/adminStyles.css
+++ b/client/css/adminStyles.css
@@ -1,347 +1,1 @@
-/*Common CSS*/
-.pall-zero {
-    padding: 0 !important;
-}
-
-.mt-5 {
-    margin-top: 5px;
-}
-
-.mt-10 {
-    margin-top: 10px;
-}
-
-.mt-15 {
-    margin-top: 15px;
-}
-
-.mt-20 {
-    margin-top: 20px;
-}
-
-.mt-25 {
-    margin-top: 25px;
-}
-
-.mt-30 {
-    margin-top: 30px;
-}
-
-.pt-5 {
-    padding-top: 5px;
-}
-
-.pt-10 {
-    padding-top: 10px;
-}
-
-@font-face {
-    font-family: 'Gotham-Medium';
-    src: url('../fonts/Gotham-Medium/Gotham-Medium.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Gotham-Medium/Gotham-Medium.otf') format('opentype'),
-    url('../fonts/Gotham-Medium/Gotham-Medium.woff') format('woff'),
-    url('../fonts/Gotham-Medium/Gotham-Medium.ttf') format('truetype'),
-    url('../fonts/Gotham-Medium/Gotham-Medium.svg#Gotham-Medium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gotham-Book';
-    src: url('../fonts/Gotham-Book/Gotham-Book.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Gotham-Book/Gotham-Book.otf') format('opentype'),
-    url('../fonts/Gotham-Book/Gotham-Book.woff') format('woff'),
-    url('../fonts/Gotham-Book/Gotham-Book.ttf') format('truetype'),
-    url('../fonts/Gotham-Book/Gotham-Book.svg#Gotham-Book') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gotham-Light';
-    src: url('../fonts/Gotham-Light/Gotham-Light.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Gotham-Light/Gotham-Light.otf') format('opentype'),
-    url('../fonts/Gotham-Light/Gotham-Light.woff') format('woff'),
-    url('../fonts/Gotham-Light/Gotham-Light.ttf') format('truetype'),
-    url('../fonts/Gotham-Light/Gotham-Light.svg#Gotham-Light') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-html{
-    height: 100% !important;
-}
-body {
-    font-family: Gotham-Light !important;
-    font-size: 14px !important;
-    background-color: #fff;
-    color: #000 !important;
-    height: 100% !important;
-}
-
-.main-page {
-    width: 100%;
-    padding: 0;
-    height: 100% !important;
-}
-
-.custom-navbar {
-    background-color: #fff;
-    border-radius: 0 !important;
-    height: 75px;
-    margin: 0 !important;
-    border-bottom: 1px solid #CCCCCC !important;
-}
-
-.admin-login {
-    display: block;
-    margin: 80px auto;
-    float: none !important;
-    background-color: #fff;
-    padding: 25px 25px 0 25px;
-    text-align: center;
-}
-
-.admin-login h3 {
-    padding: 20px 0 0;
-    margin: 0;
-    font-weight: bold;
-    color: #ccc;
-}
-
-.login-form {
-    width: 100%;
-    display: block;
-    padding: 20px;
-}
-
-.login-form li {
-    width: 90%;
-    margin: 15px auto;
-    list-style-type: none;
-}
-
-.login-form-control {
-    height: 42px !important;
-    padding: 10px !important;
-}
-
-.logo {
-    padding: 0 !important;
-    height: 0 !important;
-}
-
-.custom-btn {
-    margin-top: 5px;
-    width: 100%;
-    height: 42px;
-    background-color: rgb(117, 117, 117);
-    color: #fff;
-}
-
-.custom-btn:focus {
-    color: #fff !important;
-}
-
-.login-user {
-    padding: 10px 0 !important;
-}
-
-.left-nav{
-    background-color: #fff;
-    padding: 0 !important;
-    border-right: 1px solid #CCCCCC;
-}
-.left-menu ul{
-    margin-top: 18px;
-}
-.left-menu-li {
-    margin-bottom: 10px;
-    font-size: 18px;
-    height: 100%;
-}
-
-.left-menu-li:hover {
-    color: #000;
-    background-color: #f5f5f5;
-    width: 100%;
-}
-
-.left-menu-anchor {
-    font-family: 'Gotham-Book';
-    text-align: center;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 15px;
-    display: block;
-    width: 100%;
-    padding: 12px 15px;
-    color: #000;
-
-}
-
-.left-menu-anchor:hover, .left-menu-anchor:focus {
-    text-decoration: none;
-    color: #000;
-}
-.right-nav{
-    background-color: #fff;
-}
-.cus-main{
-    padding: 15px;
-}
-.custom-ul li{
-    padding: 10px 0 0;
-    font-size: 13px;
-    line-height: 31px;
-}
-.title-ul{
-    margin: 20px 0px 5px 0;
-    line-height: 30px;
-}
-.custom-ul li a{
-    text-decoration: none;
-    padding: 0 5px;
-}
-.active{
-    background-color: #c0c0c0;
-    color: #000;
-}
-.custom-form-control{
-    width: 65% !important;
-    height: 35px;
-}
-.newCust{
-    padding: 25px;
-}
-
-.pos-relative {
-    position: relative;
-}
-.date-pick {
-    cursor: pointer;
-    position: absolute;
-    right: 36%;
-    top: 5px;
-}
-.routes{
-    display: block;
-}
-.routes h4{
-    margin: 15px 24% 25px 0;
-    display: inline-block;
-    font-weight: bold;
-}
-.routes span{
-    font-size: 24px;
-    cursor: pointer;
-}
-.checkbox label{
-    font-size: 15px;
-    padding-left: 0 !important;
-}
-.checkbox label:after,
-.radio label:after {
-    content: '';
-    display: table;
-    clear: both;
-}
-
-.checkbox .cr,
-.radio .cr {
-    position: relative;
-    display: inline-block;
-    border: 1px solid #a9a9a9;
-    border-radius: .25em;
-    width: 1.3em;
-    height: 1.3em;
-    float: left;
-    margin-right: .5em;
-}
-
-.radio .cr {
-    border-radius: 50%;
-}
-
-.checkbox .cr .cr-icon,
-.radio .cr .cr-icon {
-    position: absolute;
-    font-size: .8em;
-    line-height: 0;
-    top: 50%;
-    left: 20%;
-}
-
-.radio .cr .cr-icon {
-    margin-left: 0.04em;
-}
-
-.checkbox label input[type="checkbox"],
-.radio label input[type="radio"] {
-    display: none;
-}
-
-.checkbox label input[type="checkbox"] + .cr > .cr-icon,
-.radio label input[type="radio"] + .cr > .cr-icon {
-    transform: scale(3) rotateZ(-20deg);
-    opacity: 0;
-    transition: all .3s ease-in;
-}
-
-.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
-.radio label input[type="radio"]:checked + .cr > .cr-icon {
-    transform: scale(1) rotateZ(0deg);
-    opacity: 1;
-}
-
-.checkbox label input[type="checkbox"]:disabled + .cr,
-.radio label input[type="radio"]:disabled + .cr {
-    opacity: .5;
-}
-.save-btns{
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-}
-.accordion-toggle span{
-    text-decoration: none;
-    font-size: 14px;
-}
-.accordion-toggle:hover, .accordion-toggle:focus  {
-text-decoration: none !important;
-    color: #c9302c;
-}
-.activated{
-    border-bottom: 2px solid #000;
-}
-footer{
-    background-color: #615f5f;
-    color: #fff;
-    height: 50px;
-    line-height: 50px;
-}
-.name-head{
-    font-size: 20px;
-}
-.smsenabled{
-    margin: 0 !important;
-}
-.account-rotues p{
-    display: inline-block;
-    font-size: 17px;
-    margin: 10px 0 22px 0px;
-    padding-right: 10px;
-}
-.account-rotues span{
-    display: inline-block;
-}
-
-.plans li{
-    width: 22% !important;
-}
-.planfc{
-    width: 100% !important;
-}
+.main-page,body,html{height:100%!important}.admin-login,.custom-navbar,body{background-color:#fff}.admin-login,.login-form,.routes{display:block}.pall-zero{padding:0!important}.mt-5{margin-top:5px}.mt-10{margin-top:10px}.mt-15{margin-top:15px}.mt-20{margin-top:20px}.mt-25{margin-top:25px}.mt-30{margin-top:30px}.pt-5{padding-top:5px}.pt-10{padding-top:10px}@font-face{font-family:Gotham-Medium;src:url(../fonts/Gotham-Medium/Gotham-Medium.eot?#iefix) format('embedded-opentype'),url(../fonts/Gotham-Medium/Gotham-Medium.otf) format('opentype'),url(../fonts/Gotham-Medium/Gotham-Medium.woff) format('woff'),url(../fonts/Gotham-Medium/Gotham-Medium.ttf) format('truetype'),url(../fonts/Gotham-Medium/Gotham-Medium.svg#Gotham-Medium) format('svg');font-weight:400;font-style:normal}@font-face{font-family:Gotham-Book;src:url(../fonts/Gotham-Book/Gotham-Book.eot?#iefix) format('embedded-opentype'),url(../fonts/Gotham-Book/Gotham-Book.otf) format('opentype'),url(../fonts/Gotham-Book/Gotham-Book.woff) format('woff'),url(../fonts/Gotham-Book/Gotham-Book.ttf) format('truetype'),url(../fonts/Gotham-Book/Gotham-Book.svg#Gotham-Book) format('svg');font-weight:400;font-style:normal}@font-face{font-family:Gotham-Light;src:url(../fonts/Gotham-Light/Gotham-Light.eot?#iefix) format('embedded-opentype'),url(../fonts/Gotham-Light/Gotham-Light.otf) format('opentype'),url(../fonts/Gotham-Light/Gotham-Light.woff) format('woff'),url(../fonts/Gotham-Light/Gotham-Light.ttf) format('truetype'),url(../fonts/Gotham-Light/Gotham-Light.svg#Gotham-Light) format('svg');font-weight:400;font-style:normal}h1,h2,h3,h4,h5,h6{margin:0}body{font-family:Gotham-Light!important;font-size:14px!important;color:#000!important}.main-page{width:100%;padding:0}.custom-navbar{border-radius:0!important;height:75px;margin:0!important;border-bottom:1px solid #CCC!important}.admin-login{margin:80px auto;float:none!important;padding:25px 25px 0;text-align:center}.admin-login h3{padding:20px 0 0;margin:0;font-weight:700;color:#ccc}.login-form{width:100%;padding:20px}.login-form li{width:90%;margin:15px auto;list-style-type:none}.login-form-control{height:42px!important;padding:10px!important}.logo{padding:0!important;height:0!important}.custom-btn{margin-top:5px;width:100%;height:42px;background-color:#757575;color:#fff}.custom-btn:focus{color:#fff!important}.login-user{padding:10px 0!important}.left-nav{background-color:#fff;padding:0!important;border-right:1px solid #CCC}.left-menu ul{margin-top:18px}.left-menu-li{margin-bottom:10px;font-size:18px;height:100%}.left-menu-li:hover{color:#000;background-color:#f5f5f5;width:100%}.left-menu-anchor{font-family:Gotham-Book;text-align:center;cursor:pointer;text-decoration:none;font-size:15px;display:block;width:100%;padding:12px 15px;color:#000}.left-menu-anchor:focus,.left-menu-anchor:hover{text-decoration:none;color:#000}.right-nav{background-color:#fff}.cus-main{padding:15px}.custom-ul li{padding:10px 0 0;font-size:13px;line-height:31px}.title-ul{margin:20px 0 5px;line-height:30px}.custom-ul li a{text-decoration:none;padding:0 5px}.active{background-color:silver;color:#000}.custom-form-control{width:65%!important;height:35px}.newCust{padding:25px}.pos-relative{position:relative}.date-pick{cursor:pointer;position:absolute;right:36%;top:5px}.routes h4{margin:15px 24% 25px 0;display:inline-block;font-weight:700}.routes span{font-size:24px;cursor:pointer}.checkbox label{font-size:15px;padding-left:0!important}.checkbox label:after,.radio label:after{content:'';display:table;clear:both}.checkbox .cr,.radio .cr{position:relative;display:inline-block;border:1px solid #a9a9a9;border-radius:.25em;width:1.3em;height:1.3em;float:left;margin-right:.5em}.radio .cr{border-radius:50%}.checkbox .cr .cr-icon,.radio .cr .cr-icon{position:absolute;font-size:.8em;line-height:0;top:50%;left:20%}.radio .cr .cr-icon{margin-left:.04em}.checkbox label input[type=checkbox],.radio label input[type=radio]{display:none}.checkbox label input[type=checkbox]+.cr>.cr-icon,.radio label input[type=radio]+.cr>.cr-icon{transform:scale(3) rotateZ(-20deg);opacity:0;transition:all .3s ease-in}.checkbox label input[type=checkbox]:checked+.cr>.cr-icon,.radio label input[type=radio]:checked+.cr>.cr-icon{transform:scale(1) rotateZ(0);opacity:1}.checkbox label input[type=checkbox]:disabled+.cr,.radio label input[type=radio]:disabled+.cr{opacity:.5}.save-btns{margin:0 auto;display:block;text-align:center}.account-rotues p,.account-rotues span{display:inline-block}.accordion-toggle span{text-decoration:none;font-size:14px}.accordion-toggle:focus,.accordion-toggle:hover{text-decoration:none!important;color:#c9302c}.activated{border-bottom:2px solid #000}footer{background-color:#615f5f;color:#fff;height:50px;line-height:50px}.name-head{font-size:20px}.smsenabled{margin:0!important}.account-rotues p{font-size:17px;margin:10px 0 22px;padding-right:10px}.plans li{width:22%!important}.planfc{width:100%!important}
