--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -37,7 +37,7 @@
                     <adminleft-menu label="Dashboard"></adminleft-menu>
                     <adminleft-menu label="Customers" ui-sref="customers.customersLead"></adminleft-menu>
                     <adminleft-menu label="Services" ui-sref="services.gpsAccounts"></adminleft-menu>
-                    <adminleft-menu label="Order Process"></adminleft-menu>
+                    <adminleft-menu label="orderProcess" ui-sref="orderProcess.truckRequest"></adminleft-menu>
                     <adminleft-menu label="Settings"></adminleft-menu>
                     <adminleft-menu label="Set Notifications"></adminleft-menu>
                     <adminleft-menu label="Admin"></adminleft-menu>
@@ -76,6 +76,8 @@
 
 <!---Controllers--->
 <script src="js/modules/admin/customerModule.js"></script>
+<script src="js/modules/admin/orderProcessModule.js"></script>
+
 <!---Directives--->
 <script src="js/directives/adminLeftNav.js"></script>
 <script src="js/directives/adminDatePicker.js"></script>
