--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -37,7 +37,7 @@
                     <adminleft-menu label="Dashboard"></adminleft-menu>
                     <adminleft-menu label="Customers" ui-sref="customers.customersLead"></adminleft-menu>
                     <adminleft-menu label="Services" ui-sref="services.gpsAccounts"></adminleft-menu>
-                    <adminleft-menu label="orderProcess" ui-sref="orderProcess.truckRequest"></adminleft-menu>
+                    <adminleft-menu label="Order Process" ui-sref="orderprocess.truckRequest"></adminleft-menu>
                     <adminleft-menu label="Settings"></adminleft-menu>
                     <adminleft-menu label="Set Notifications"></adminleft-menu>
                     <adminleft-menu label="Admin"></adminleft-menu>
