--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -44,7 +44,7 @@
                         <adminleft-menu label="Customers" ui-sref="customers.customersLead"></adminleft-menu>
                         <adminleft-menu label="Services" ui-sref="services.gpsAccounts"></adminleft-menu>
                         <adminleft-menu label="Order Process"></adminleft-menu>
-                        <adminleft-menu label="Settings"></adminleft-menu>
+                        <adminleft-menu label="Settings" ui-sref="settings.gpsSettings"></adminleft-menu>
                         <adminleft-menu label="Set Notifications"></adminleft-menu>
                         <adminleft-menu label="Admin"></adminleft-menu>
                         <div class="clearfix"></div>
@@ -88,6 +88,7 @@
     <!--Controllers-->
     <script src="js/modules/admin/customerModule.js"></script>
     <script src="js/modules/admin/orderProcessModule.js"></script>
+    <script src="js/modules/admin/settingsModule.js"></script>
     <!--Services-->
     <script src="js/services.js"></script>
     <script src="js/lib/bundles/ng-table.js"></script>
