gulp with npm commands

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,27 +5,9 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/fav.png" type="image/png" sizes="32x32">
-    <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
-    <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css"
-          href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
-
-    <!-- build:css ./client/ all.css -->
-    <!--<link rel="stylesheet" type="text/css" href="css/styles.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="css/slick.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="css/slick-theme.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="css/select2.css">-->
-    <!-- endbuild -->
-
-
-    <link rel="stylesheet" type="text/css" href="css/all.css">
-    <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
-    <link rel="stylesheet" href="components/sweetalert2/dist/sweetalert2.min.css">
-    <link rel="stylesheet" href=" components/ng-img-crop/compile/unminified/ng-img-crop.css">
-    <link rel="stylesheet" href="components/angular-ui-select/dist/select.min.css">
-    <link rel="stylesheet" type="text/css" href="components/datatables.net-dt/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="components/datatables.net-responsive-dt/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="dist/components/components.min.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/all.css">
 </head>
 
 <body ng-app="EasyGaadi" ng-cloak>
@@ -121,58 +103,18 @@
 </span>
 
 <!--bower scripts-->
-<!--<script src="components/jquery/dist/jquery.min.js"></script>-->
-<!--<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>-->
-<!--<script src="components/angular/angular.min.js"></script>-->
-<!--<script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>-->
-<!--<script src="components/angular-cookies/angular-cookies.min.js"></script>-->
-<!--<script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>-->
-<!--<script src="components/underscore/underscore-min.js"></script>-->
-<!--<script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>-->
-<script src="components/components.min.js"></script>
+<script src="dist/components/components.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
-<!--<script src="components/sweetalert2/dist/sweetalert2.all.min.js"></script>-->
-<!--<script type="text/javascript" src="components/ng-file-upload/ng-file-upload.min.js"></script>-->
-<!--<script type="text/javascript" src="components/ng-file-upload/ng-file-upload-shim.min.js"></script>-->
-<!--<script type="text/javascript" src="/components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>-->
-<!--<script src="components/angular-ui-select/dist/select.min.js"></script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
-<!--<script type="text/javascript" src="components/datatables.net/js/jquery.dataTables.min.js"></script>-->
-<!--<script type="text/javascript" src="components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>-->
 <!--app-->
 <!--<script src="js/app.js"></script>-->
 
 <!--services-->
-<!--<script src="js/services.js"></script>-->
-<!--<script src="js/directives/leftMenu.js"></script>-->
-<!--<script src="js/directives/datePicker.js"></script>-->
-<!--<script src="js/services/paginationService.js"></script>-->
-<!--<script src="js/directives/checkList.js"></script>-->
-<script src="js/app.min.js"></script>
+<script src="dist/js/app.min.js"></script>
 <script src="js/lib/bundles/ng-table.js"></script>
 <script src="js/slick.js"></script>
 
 <!--controllers-->
-<!--<script src="js/modules/nav.js"></script>-->
-<!--<script src="js/modules/login.js"></script>-->
-<!--<script src="js/modules/accountsModule.js"></script>-->
-<!--<script src="js/modules/tripsModule.js"></script>-->
-<!--<script src="js/modules/driversModule.js"></script>-->
-<!--<script src="js/modules/trucksModule.js"></script>-->
-<!--<script src="js/modules/groupModule.js"></script>-->
-<!--<script src="js/modules/rolesModule.js"></script>-->
-<!--<script src="js/modules/partyModule.js"></script>-->
-<!--<script src="js/modules/expenseModule.js"></script>-->
-<!--<script src="js/modules/paymentsModule.js"></script>-->
-<!--<script src="js/modules/tripLanesModule.js"></script>-->
-<!--<script src="js/modules/expenseMasterModule.js"></script>-->
-<!--<script src="js/modules/pendingBalanceModule.js"></script>-->
-<!--<script src="js/modules/trackMapModule.js"></script>-->
-<!--<script src="js/modules/groupMap.js"></script>-->
-<!--<script src="js/modules/dashBoardModule.js"></script>-->
-<!--<script src="js/modules/GpsSettingsCrtl.js"></script>-->
-<!--<script src="js/modules/gpsModule.js"></script>-->
-<!--<script src="js/modules/analyticsModule.js"></script>-->
-<script src="js/modules/main.min.js"></script>
+<script src="dist/js/main.min.js"></script>
 </body>
 </html>
