--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -1,142 +1,65 @@
-<ul class="list-inline title-ul">
-    <li class="pull-left name-head">GPS Device <Accounts></Accounts></li>
+<div ng-controller="DeviceCtrl">
+    <ul class="list-inline title-ul">
+        <li class="pull-left name-head">GPS Device
+            <Accounts></Accounts>
+        </li>
 
-    <li class="pull-right">
-        <button class="btn btn-success">Assign Devices</button>
-    </li>
-    <li class="pull-right">
-        <button class="btn btn-primary">Add Devices</button>
-    </li>
-    <li class="pull-right col-xs-2">
-        <select class="form-control">
-            <option>Select</option>
-            <option>Trucks</option>
-            <option>Non Trucks</option>
-            <option>Both</option>
-            <option>SMS Enabled</option>
-            <option>SMS Disabled</option>
-            <option>Status Enabled</option>
-            <option>Status Disbaled</option>
-        </select>
-    </li>
-    <div class="clearfix"></div>
-</ul>
-<table class="table table-bordered table-responsive mt-20 text-center">
-    <thead>
-    <tr>
-        <th>S No</th>
-        <th>ID</th>
-        <th>Customer Name</th>
-        <th>Mobile</th>
-        <th>Reg Date</th>
-        <th>Sold by</th>
-        <th>ERP</th>
-        <th>Payment</th>
-        <th>Plan Expiry</th>
-        <th>Status</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Sai</td>
-        <td>Yes</td>
-        <td>
+        <li class="pull-right">
+            <button class="btn btn-success">Assign Devices</button>
+        </li>
+        <li class="pull-right">
+            <button class="btn btn-primary" ui-sref="services.addDevice">Add Devices</button>
+        </li>
+        <li class="pull-right col-xs-2">
             <select class="form-control">
-                <option>Pending</option>
-                <option>Collected</option>
-                <option>Deposited</option>
-                <option>Confirmed</option>
+                <option>Select</option>
+                <option>Trucks</option>
+                <option>Non Trucks</option>
+                <option>Both</option>
+                <option>SMS Enabled</option>
+                <option>SMS Disabled</option>
+                <option>Status Enabled</option>
+                <option>Status Disbaled</option>
             </select>
-        </td>
-        <td>12/05/2019</td>
-        <td>Enable</td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Sai</td>
-        <td>Yes</td>
-        <td>
-            <select class="form-control">
-                <option>Pending</option>
-                <option>Collected</option>
-                <option>Deposited</option>
-                <option>Confirmed</option>
-            </select>
-        </td>
-        <td>12/05/2019</td>
-        <td>Enable</td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Sai</td>
-        <td>Yes</td>
-        <td>
-            <select class="form-control">
-                <option>Pending</option>
-                <option>Collected</option>
-                <option>Deposited</option>
-                <option>Confirmed</option>
-            </select>
-        </td>
-        <td>12/05/2019</td>
-        <td>Enable</td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Sai</td>
-        <td>Yes</td>
-        <td>
-            <select class="form-control">
-                <option>Pending</option>
-                <option>Collected</option>
-                <option>Deposited</option>
-                <option>Confirmed</option>
-            </select>
-        </td>
-        <td>12/05/2019</td>
-        <td>Enable</td>
-        <td>Edit/Delete</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>2889</td>
-        <td>Sravan Kumar</td>
-        <td>9618485858</td>
-        <td>01/05/2017</td>
-        <td>Sai</td>
-        <td>Yes</td>
-        <td>
-            <select class="form-control">
-                <option>Pending</option>
-                <option>Collected</option>
-                <option>Deposited</option>
-                <option>Confirmed</option>
-            </select>
-        </td>
-        <td>12/05/2019</td>
-        <td>Enable</td>
-        <td>Edit/Delete</td>
-    </tr>
-    </tbody>
-</table>
+        </li>
+        <div class="clearfix"></div>
+    </ul>
+    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="deviceParams">
+        <tr ng-repeat="device in currentPageOfDevices" style="text-align: center;">
+            <td data-title="'Account ID'" sortable="'accountId'" class="clickable-item">
+                {{device.accountId.userName}}
+            </td>
+            <td data-title="'SIM Phone No'" sortable="'simPhoneNumber'" class="clickable-item">
+                {{device.simPhoneNumber}}
+            </td>
+            <td data-title="'imei'" sortable="'imei'" class="clickable-item">
+                {{device.imei}}
+            </td>
+            <td data-title="'GPS Update'" sortable="'updatedAt'" class="clickable-item">
+                {{device.updatedAt | date:'yyyy-MM-dd'}}
+            </td>
+            <td data-title="'Plan Expiry'" sortable="'expiryTime'" class="clickable-item">
+                {{device.expiryTime | date:'yyyy-MM-dd'}}
+            </td>
+            <td data-title="'Date Created'" sortable="'createdAt'" class="clickable-item">
+                {{device.createdAt | date:'yyyy-MM-dd'}}
+            </td>
+            <td data-title="'Installed By'" sortable="'installedBy'" class="clickable-item">
+                {{device.installedBy}}
+            </td>
+            <td data-title="'Payment'" sortable="'received'" class="clickable-item">
+                {{device.received}}
+            </td>
+            <td data-title="'Status'" sortable="'isDamaged'" class="clickable-item">
+                {{device.isDamaged === '0' && 'working' || 'Not working'}}
+            </td>
+            <td data-title="'Edit/Delete'" sortable="'imei'" class="clickable-item">
+                <a href="#" ui-sref="services.editGpsDevice({device: device._id})">Edit /</a>
+                <a href="#" ng-click="deleteDevice($index)">Delete</a>
+            </td>
+        </tr>
+        <tr ng-if="!currentPageOfDevices || currentPageOfDevices.length === 0">
+            <td colspan="8">No drivers Records exist.</td>
+        </tr>
+    </table>
+</div>
