--- a/client/views/partials/admin/adminLogin.html
+++ b/client/views/partials/admin/adminLogin.html
@@ -1,23 +1,36 @@
-<div class="col-xs-12">
-    <div class="col-xs-12 col-sm-8 col-md-4 admin-login">
+<div class="col-sm-offset-3 col-sm-6" ng-controller="AdminLoginCtrl" >
+    <div class="admin-login">
         <h3>Admin Login</h3>
+        <form class="login-form mt-10" ng-submit="logIn()">
+
         <ul class="login-form">
 
             <li class="form-group">
-                <input type="text" class="form-control login-form-control" name="userName"
+                <input type="text" class="form-control login-form-control" ng-model="loginParams.userName" name="userName"
                        placeholder="User Name"/>
             </li>
             <li class="form-group">
-                <input type="text" class="form-control login-form-control" name="password"
+                <input type="text" class="form-control login-form-control" ng-model="loginParams.password" name="password"
                        placeholder="Password"/>
             </li>
             <li class="form-group">
-                <input type="text" class="form-control login-form-control" name="mobileNum"
+                <input type="text" class="form-control login-form-control" ng-model="loginParams.contactPhone" name="mobileNum"
                        placeholder="Mobile Num"/>
             </li>
             <li class="form-group">
-                <input type="submit" class="btn custom-btn" value="Login" />
+                <input type="submit" class="btn custom-btn" ng-click="login()" value="Login"/>
             </li>
         </ul>
+        </form>
+        <div class="col-xs-10 col-xs-push-1">
+            <div class="alert alert-danger" role="alert" ng-show="loginParams.errors.length">
+                <ul>
+                    <li ng-repeat="error in loginParams.errors">{{error}}</li>
+                </ul>
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
+    <div class="clearfix"></div>
 </div>
+<div class="clearfix"></div>
