added files in index.html

--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -73,11 +73,15 @@
     <script src="components/angular/angular.min.js"></script>
     <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="components/ng-file-upload/ng-file-upload.min.js"></script>
+    <script type="text/javascript" src="components/ng-file-upload/ng-file-upload-shim.min.js"></script>
+    <script src="components/sweetalert2/dist/sweetalert2.all.min.js"></script>
     <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
     <script src="js/lib/bundles/ng-table.js"></script>
     <script src="components/angular-ui-select/dist/select.min.js"></script>
     <script src="components/underscore/underscore-min.js"></script>
-    <script src="components/sweetalert2/dist/sweetalert2.all.min.js"></script>
+    <script src="components/angular-ui-select/dist/select.min.js"></script>
+    <script src="components/underscore/underscore-min.js"></script>
 
     <!--Routing adminApp.js File-->
     <script src="js/adminApp.js"></script>
@@ -86,17 +90,11 @@
     <script src="js/modules/admin/customerModule.js"></script>
     <script src="js/modules/admin/orderProcessModule.js"></script>
     <script src="js/modules/admin/settingsModule.js"></script>
+    <script src="js/modules/admin/devicesModule.js"></script>
     <!--Services-->
     <script src="js/services.js"></script>
     <script src="js/lib/bundles/ng-table.js"></script>
     <!--Directives-->
-    <script src="js/directives/adminLeftNav.js"></script>
-    <script src="js/directives/adminDatePicker.js"></script>
-    <!---Controllers--->
-    <script src="js/modules/admin/customerModule.js"></script>
-    <script src="js/modules/admin/devicesModule.js"></script>
-
-    <!---Directives--->
     <script src="js/directives/adminLeftNav.js"></script>
     <script src="js/directives/adminDatePicker.js"></script>
 
