add device module

--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -5,7 +5,7 @@
         </li>
 
         <li class="pull-right">
-            <button class="btn btn-success">Assign Devices</button>
+            <button class="btn btn-success" ui-sref="services.transferDevice">Assign Devices</button>
         </li>
         <li class="pull-right">
             <button class="btn btn-primary" ui-sref="services.addDevice">Add Devices</button>
