--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -91,6 +91,7 @@
 <script src="components/angular-cookies/angular-cookies.min.js"></script>
 <script src="components/angular-ui-select/dist/select.min.js"></script>
 <script src="components/underscore/underscore-min.js"></script>
+<script type="text/javascript" src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
