--- a/client/views/partials/admin/services/addDevice.html
+++ b/client/views/partials/admin/services/addDevice.html
@@ -1,4 +1,4 @@
-<div ng-controller="DeviceEditCrtl">
+<div ng-controller="addAndAssignDevicesCrtl">
     <table class="table table-bordered table-responsive">
         <thead>
         <tr>
@@ -22,7 +22,15 @@
         </tr>
         </tbody>
     </table>
-
+    <div class="col-xs-12 text-center add-product-error">
+        <div ng-show="errors.length > 0">
+            <ul class="col-xs-4 col-xs-push-4" style="list-style: none">
+                <li class="alert alert-danger" ng-repeat="error in errors">
+                    {{error}}
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm-8 col-sm-offset-4">
             <div ng-show="alreadyadded.length" ng-repeat="added in alreadyadded">{{added}} already added in database</div>
@@ -30,12 +38,13 @@
                 <p>Selected Devices to be Assigned to </p>
             </div>
             <div class="form-group col-sm-4">
-                <select class="form-control">
-                    <option>Employee 1</option>
-                    <option>Employee 2</option>
+                <select class="form-control custom-form-control" ng-model="assignedTo">
+                    <option value="" selected>Select</option>
+                    <option ng-repeat="employee in employees" value="{{employee.id_admin}}">{{employee.displayName}}</option>
                 </select>
             </div>
             <div class="form-group col-sm-3">
+                <a href="#" class="btn btn-primary" ui-sref="services.gpsDevices"> Cancel</a>
                 <a href="#" class="btn btn-primary" ng-click="addDevices()"> Submit</a>
             </div>
         </div>
